--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">
-                <img src="images/tfs.png" alt="Logo" class="logo-image">
+                <img src="images/fcb.png" alt="Logo" class="logo-image">
+                <p class="client">Client Name</p>
             </a>
             <ul class="nav-links">
                 <li><a href="#about">Who we are</a></li>
