--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <img src="images/tfs.png" alt="Logo" class="footer-logo">
+            <img src="images/fcb.png" alt="Logo" class="footer-logo">
             <div class="footer-links">
                 <a href="#about">Who we are</a>
                 <a href="#team">Team</a>
